# WebRunner

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  LEARN.md  README.md  SECURITY.md  dev.toml  dev_requirements.txt  dev_setup.py  pyproject.toml  requirements.txt  setup.py  stable.toml
.circleci/: config.yml
.github/: dependabot.yml
.github/workflows/: e2e_browser.yml  publish_stable.yml  test_dev.yml  test_stable.yml  webrunner-github-actions_dev.yml  webrunner-github-actions_stable.yml  webrunner_dev_python3_10.yml  webrunner_dev_python3_11.yml  webrunner_dev_python3_12.yml  webrunner_dev_python3_8.yml  webrunner_dev_python3_9.yml  webrunner_stable_python3_10.yml  webrunner_stable_python3_11.yml  webrunner_stable_python3_12.yml  webrunner_stable_python3_8.yml  webrunner_stable_python3_9.yml
README/: README_zh-CN.md  README_zh-TW.md
circle_ci_test_dev/: test.py
circle_ci_test_dev/desired_capabilities_test/: desired_capabilities_test.py
circle_ci_test_dev/find_and_click_test/: find_and_click_test.py
circle_ci_test_dev/multi_driver_test/: multi_driver_test.py
circle_ci_test_dev/start_webdriver_and_asset_title_test/: title_test.py
circle_ci_test_dev/start_webdriver_test/: get_webdriver.py
circle_ci_test_dev/start_webdriver_with_options/: webdriver_with_options.py
deprecation_for_old_python/: dev_setup.py  setup.py
docker/: .env.example  docker-compose.yml
docs/: requirements.txt
docs/ide/: jetbrains-jsonschemamapping.example.xml  vscode-settings.example.json
docs/reference/: command_reference.md  webrunner-action-schema.json
docs/source/: conf.py  index.rst
examples/: counting_stars.json  counting_stars.py  fanout_demo.py  form_submit.py  google_search.py  pii_redact_demo.py  quick_smoke.json  rescue_me.json  rescue_me.py  smart_wait_demo.py
je_eb_runner/: __init__.py
je_eb_runner/selenium_utils_wrapper/: __init__.py
je_eb_runner/selenium_webdrive_wrapper/: __init__.py  get_webdrivers.py  webdriver_find_wrapper.py  webdriver_with_options.py  webdriver_wrapper.py
je_eb_runner/test_object/: __init__.py
je_eb_runner/utils/: __init__.py
je_web_runner/: __init__.py  __main__.py
je_web_runner/action_lsp/: __init__.py  __main__.py  server.py
je_web_runner/api/: __init__.py  authoring.py  debugging.py  frontend.py  infra.py  mobile.py  networking.py  observability.py  quality.py  reliability.py  security.py  test_data.py
je_web_runner/element/: web_element_wrapper.py
je_web_runner/je_web_runner/: __init__.py  web_element_wrapper.py  webdriver_with_options.py  webdriver_wrapper.py  webrunner_manager.py
je_web_runner/manager/: webrunner_manager.py
je_web_runner/mcp_server/: __init__.py  __main__.py  browser_tools.py  server.py
je_web_runner/selenium_utils_wrapper/: __init__.py
je_web_runner/selenium_webdrive_wrapper/: __init__.py  get_webdrivers.py  webdriver_find_wrapper.py  webdriver_with_options.py  webdriver_wrapper.py
je_web_runner/selenium_wrapper/: __init__.py  web_element_wrapper.py  webdriver_manager.py  webdriver_wrapper.py
je_web_runner/test_object/: __init__.py
je_web_runner/utils/: __init__.py
je_web_runner/webdriver/: playwright_element_wrapper.py  playwright_locator.py  playwright_wrapper.py  webdriver_with_options.py  webdriver_wrapper.py
je_web_runner/webdriver_download_manager/: archive.py  chrome.py  driver.py  driver_cache.py  firefox.py  manager.py  microsoft.py  opera.py  utils.py
je_web_runner/webdriver_manager/: chrome.py  driver.py  driver_cache.py  firefox.py  manager.py  microsoft.py  opera.py  utils.py
selenium_wrapper/: __init__.py
selenium_wrapper/get_webdriver_wrapper/: __init__.py
selenium_wrapper/selenium_utils/: __init__.py
selenium_wrapper/selenium_utils_wrapper/: __init__.py
selenium_wrapper/selenium_webdrive_wrapper/: __init__.py  get_webdrivers.py  webdriver_find_wrapper.py  webdriver_quit_wrapper.py  webdriver_with_options.py  webdriver_wrapper.py
selenium_wrapper/test_object/: __init__.py  test_object.py
selenium_wrapper/utils/: __init__.py
selenium_wrapper/wrapper/: __init__.py
test/: test.py
test/change_driver_test/: change_driver_test.py
test/desired_capabilities_test/: desired_capabilities_test.py
test/e2e_test/: conftest.py  test_shadow_pierce_e2e.py  test_smart_wait_e2e.py
test/find_and_click_test/: find_and_click_test.py
test/integration_test/: test_action_lsp_subprocess.py  test_authoring_pipeline.py  test_bootstrap_pipeline.py  (+8 more)
web_runner/: __init__.py
web_runner_driver/: generate_web_runner_driver.py
(+870 files in other folders)
