# Rename to build stable version
# This is stable version
[build-system]
requires = ["setuptools>=82.0.1"]
build-backend = "setuptools.build_meta"

[project]
name = "je_web_runner"
version = "0.0.85"
authors = [
    { name = "JE-Chen", email = "jechenmailman@gmail.com" },
]
description = "WEB Automation Framework"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
keywords = [
    "selenium", "automation", "testing", "web-automation",
    "webdriver", "browser", "e2e", "qa",
]
dependencies = [
    "selenium>=4.0.0",
    'requests',
    'python-dotenv',
    "webdriver-manager",
    "defusedxml",
    "Pillow",
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3 :: Only",
    "Environment :: Win32 (MS Windows)",
    "Environment :: MacOS X",
    "Environment :: X11 Applications",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Quality Assurance",
]

[project.urls]
Homepage = "https://github.com/Intergration-Automation-Testing/WebRunner"
Documentation = "https://webrunner.readthedocs.io/en/latest/"
Code = "https://github.com/Intergration-Automation-Testing/WebRunner"

[project.readme]
file = "README.md"
content-type = "text/markdown"


[tool.setuptools.packages]
find = { namespaces = false }

[tool.setuptools.package-data]
# Ship the PEP 561 marker so downstream type checkers honour the inline
# type hints exported by je_web_runner.
je_web_runner = ["py.typed"]

[tool.pytest.ini_options]
# Real test modules are named test_*.py across unit/integration/e2e. The
# legacy *_test.py scripts under test/unit_test/*/ are standalone browser
# programs that call sys.exit() at import time, so restricting collection to
# the test_*.py pattern keeps `python -m pytest test/` from crashing on them.
testpaths = ["test"]
python_files = ["test_*.py"]
